--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 <head>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="./src/style.css">
@@ -11,6 +13,131 @@
   <title>Planner Online</title>
 </head>
 <body>
+  <header>
+      <div class="cabeca">
+        <h1 class="titulo">Planner Online</h1>
+        <div class="DarkModeButtons">
+          <button><i class="fa-regular fa-moon"></i></button>
+          <button><i class="fa-regular fa-sun"></i></button>
+        </div>
+
+        <div class="SideBar">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+  </header>
+
+
+  <main>
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          Segunda-Feira
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          Terça-Feira
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          Quarta-Feira
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          Quinta-Feira
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          Sexta-Feira
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          Sábado
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+
+    <div class="conteiner-card">
+      <div class="header-card">
+        <h2>
+          domingo
+        </h2>
+        <button>
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+      <div class="card-body">
+        <input type="text" class="border"/>
+        <p>Tarefas:</p>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+
+  </footer>
   
 </body>
 </html>
