--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" id="html">
 <head>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -10,134 +10,137 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Planner Online</title>
 </head>
 <body>
   <header>
-      <div class="cabeca">
-        <h1 class="titulo">Planner Online</h1>
+      <div class="cabecaLight" id="cabeca">
+        <h1 class="tituloLight" id="titulo">Planner Online</h1>
         <div class="DarkModeButtons">
-          <button><i class="fa-regular fa-moon"></i></button>
-          <button><i class="fa-regular fa-sun"></i></button>
+          <button class='' onclick="darkMode()" id="dark"><i class="fa-regular fa-moon"></i></button>
+          <button class='hide' onclick="lightMode()" id="light" ><i class="fa-regular fa-sun"></i></button>
         </div>
 
         <div class="SideBar">
-          <i class="fa-solid fa-bars"></i>
+          <button><i class="fa-solid fa-bars"></i></button> 
         </div>
       </div>
   </header>
 
 
   <main>
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card"  id="header-card">
         <h2>
           Segunda-Feira
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
 
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card" id="header-card">
         <h2>
           Terça-Feira
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text"placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
 
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card" id="header-card">
         <h2>
           Quarta-Feira
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
 
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card" id="header-card">
         <h2>
           Quinta-Feira
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
 
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card" id="header-card">
         <h2>
           Sexta-Feira
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
 
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card" id="header-card">
         <h2>
           Sábado
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
 
-    <div class="conteiner-card">
-      <div class="header-card">
+    <div class="conteiner-card" id="conteiner-card">
+      <div class="header-card" id="header-card">
         <h2>
           domingo
         </h2>
-        <button>
+        <button class="adctarefa" onclick="adcTarefa(segunda)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" class="border"/>
-        <p>Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <p class="textTarefas">Tarefas:</p>
       </div>
     </div>
   </main>
 
   <footer>
-
+    <p>Desenvolvido para o Projeto de conclusão de semestre da faculdade USJT</p>
   </footer>
-  
+
+
+  <script src="src/main.js"></script>
 </body>
 </html>
