--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -65,7 +65,7 @@
         <h2>
           Quarta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa(terca)">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
