--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -30,108 +30,123 @@
 
 
   <main>
+
+      <!-- Card segunda -->
     <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card"  id="header-card">
+      <div class="header-card" id="header-card">
         <h2>
           Segunda-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-segunda" id="input-segunda"/>
+        <p class="text-tarefa text-light" >Tarefas:</p>
+        <div class="tarefas" id="segunda"></div>
       </div>
     </div>
 
+      <!-- Card Terça -->
     <div class="conteiner-card" id="conteiner-card">
       <div class="header-card" id="header-card">
         <h2>
           Terça-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text"placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
+
       </div>
     </div>
 
+      <!-- Card Quarta -->
     <div class="conteiner-card" id="conteiner-card">
       <div class="header-card" id="header-card">
         <h2>
           Quarta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(terca)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text" placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
+
       </div>
     </div>
 
+      <!-- Card Quinta -->
     <div class="conteiner-card" id="conteiner-card">
       <div class="header-card" id="header-card">
         <h2>
           Quinta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text" placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
+
       </div>
     </div>
 
+      <!-- Card Sexta -->
     <div class="conteiner-card" id="conteiner-card">
       <div class="header-card" id="header-card">
         <h2>
           Sexta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text" placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
+
       </div>
     </div>
 
+      <!-- Card Sabado -->
     <div class="conteiner-card" id="conteiner-card">
       <div class="header-card" id="header-card">
         <h2>
           Sábado
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text" placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
+
       </div>
     </div>
 
+      <!-- Card Domingo -->
     <div class="conteiner-card" id="conteiner-card">
       <div class="header-card" id="header-card">
         <h2>
           domingo
         </h2>
-        <button class="adctarefa" onclick="adcTarefa(segunda)">
+        <button class="adctarefa" onclick="adcTarefa()">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text" placeholder="Digite sua tarefa aqui"/>
-        <p class="textTarefas">Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
+
       </div>
     </div>
   </main>
