--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -32,122 +32,122 @@
   <main>
 
       <!-- Card segunda -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+    <div class="conteiner conteiner-card">
+      <div class="header header-card">
         <h2>
           Segunda-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(segunda)" id="adicionar-segunda">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
         <input type="text" placeholder="Digite sua tarefa aqui" name="input-segunda" id="input-segunda"/>
-        <p class="text-tarefa text-light" >Tarefas:</p>
+        <p class="text-tarefa text-light">Tarefas:</p>
         <div class="tarefas" id="segunda"></div>
-      </div>
+    </div>
     </div>
 
       <!-- Card Terça -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+      <div class="conteiner conteiner-card">
+        <div class="header header-card">
         <h2>
           Terça-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(terca)" id="adicionar-terca">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text"placeholder="Digite sua tarefa aqui"/>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-terca" id="input-terca"/>
         <p class="text-tarefa text-light">Tarefas:</p>
-
-      </div>
+        <div class="tarefas" id="terca"></div>
+    </div>
     </div>
 
       <!-- Card Quarta -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+      <div class="conteiner conteiner-card">
+        <div class="header header-card">
         <h2>
           Quarta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(quarta)" id="adicionar-quarta">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-quarta" id="input-quarta"/>
         <p class="text-tarefa text-light">Tarefas:</p>
-
-      </div>
+        <div class="tarefas" id="quarta"></div>
+    </div>
     </div>
 
       <!-- Card Quinta -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+      <div class="conteiner conteiner-card">
+        <div class="header header-card">
         <h2>
           Quinta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(quinta)" id="adicionar-quinta">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-quinta" id="input-quinta"/>
         <p class="text-tarefa text-light">Tarefas:</p>
-
-      </div>
+        <div class="tarefas" id="quinta"></div>
+    </div>
     </div>
 
       <!-- Card Sexta -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+      <div class="conteiner conteiner-card">
+        <div class="header header-card">
         <h2>
           Sexta-Feira
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(sexta)" id="adicionar-sexta">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-sexta" id="input-sexta"/>
         <p class="text-tarefa text-light">Tarefas:</p>
-
-      </div>
+        <div class="tarefas" id="sexta"></div>
+    </div>
     </div>
 
       <!-- Card Sabado -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+      <div class="conteiner conteiner-card">
+        <div class="header header-card">
         <h2>
           Sábado
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(Sabado)" id="adicionar-Sabado">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-Sabado" id="input-Sabado"/>
         <p class="text-tarefa text-light">Tarefas:</p>
-
-      </div>
+        <div class="tarefas" id="Sabado"></div>
+    </div>
     </div>
 
       <!-- Card Domingo -->
-    <div class="conteiner-card" id="conteiner-card">
-      <div class="header-card" id="header-card">
+      <div class="conteiner conteiner-card">
+        <div class="header header-card">
         <h2>
           domingo
         </h2>
-        <button class="adctarefa" onclick="adcTarefa()">
+        <button class="adctarefa" onclick="adcTarefa(Domingo)" id="adicionar-Domingo">
           <i class="fa-solid fa-plus"></i>
         </button>
       </div>
       <div class="card-body">
-        <input type="text" placeholder="Digite sua tarefa aqui"/>
+        <input type="text" placeholder="Digite sua tarefa aqui" name="input-Domingo" id="input-Domingo"/>
         <p class="text-tarefa text-light">Tarefas:</p>
-
-      </div>
+        <div class="tarefas" id="Domingo"></div>
+    </div>
     </div>
   </main>
 
