--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -31,7 +31,7 @@
 
   <main>
 
-      <!-- Card segunda -->
+      <!-- Card segunda! -->
     <div class="conteiner conteiner-card">
       <div class="header header-card">
         <h2>
@@ -119,7 +119,7 @@
       <!-- Card Sabado -->
       <div class="conteiner conteiner-card">
         <div class="header header-card">
-        <h2>
+        <h2>$
           Sábado
         </h2>
         <button class="adctarefa" onclick="adcTarefa(Sabado)" id="adicionar-Sabado">
