--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -20,6 +20,7 @@
         <div class="DarkModeButtons">
           <button class='' onclick="darkMode()" id="dark"><i class="fa-regular fa-moon"></i></button>
           <button class='hide' onclick="lightMode()" id="light" ><i class="fa-regular fa-sun"></i></button>
+          <p class="tester">tester</p>
         </div>
 
         <div class="SideBar">
@@ -154,6 +155,6 @@
   </footer>
 
 
-  <script src="src/main.js"></script>
+  <script src="src/main.js" defer></script>
 </body>
 </html>
