--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -14,20 +14,54 @@
   <title>Planner Online</title>
 </head>
 <body>
-  <header>
-      <div class="cabecaLight" id="cabeca">
-        <h1 class="tituloLight" id="titulo">Planner Online</h1>
-        <div class="DarkModeButtons">
-          <button class='' onclick="darkMode()" id="dark"><i class="fa-regular fa-moon"></i></button>
-          <button class='hide' onclick="lightMode()" id="light" ><i class="fa-regular fa-sun"></i></button>
-          <p class="tester">tester</p>
-        </div>
 
-        <div class="SideBar">
-          <button><i class="fa-solid fa-bars"></i></button> 
-        </div>
-      </div>
-  </header>
+<header>
+<div class="cabecaLight" id="cabeca">
+  <h1 class="tituloLight" id="titulo">Planner Online</h1>
+  <div class="DarkModeButtons">
+    <button class='' onclick="darkMode()" id="dark"><i class="fa-regular fa-moon"></i></button>
+    <button class='hide' onclick="lightMode()" id="light" ><i class="fa-regular fa-sun"></i></button>
+    <p class="tester">tester</p>
+  </div>
+
+  <!-- Side Bar -->
+<div>
+  <input type="checkbox" id="check">
+  <label for="check">
+    <i class="fas fa-bars" id="btn"></i>
+    <i class="fas fa-times" id="cancel"></i>
+  </label>
+  <div class="sidebar">
+    <header>Menu</header>
+    <a href="#" >
+      <i class="fas fa-user"></i>
+      <span>Usuário</span>
+    </a>
+    <a href="#">
+      <i class="fas fa-history"></i>
+      <span>Histórico</span>
+    </a>
+    <a href="#">
+      <i class="fas fa-book"></i>
+      <span>Tutorial</span>
+    </a>
+    <a onclick="limparTodasTarefas()">
+      <i class="fas fa-trash"></i>
+      <span >Limpar tudo</span>
+    </a>
+    <a href="#">
+      <i class="far fa-question-circle"></i>
+      <span>Sobre</span>
+    </a>
+    <a href="#">
+      <i class="fa fa-user-times"></i>
+      <span>Sair</span>
+    </a>
+  </div>
+  </div>
+</div>
+</div>
+</header>
 
 
   <div class="header-adicionarTarefa">
