--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -13,7 +13,7 @@
   
   <title>Planner Online</title>
 </head>
-<body>
+<body onload="Carregar()">
 
 <header>
 <div class="cabecaLight" id="cabeca">
@@ -189,7 +189,7 @@
     <p>Desenvolvido para o Projeto de conclusão de semestre da faculdade USJT</p>
   </footer>
 
-
-  <script src="src/main.js" defer></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script type="module" src="src/main.js" defer></script>
 </body>
 </html>
