--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -28,11 +28,11 @@
 <header>
 <div class="cabecaLight" id="cabeca">
   <h1 class="tituloLight" id="titulo">Planner Online</h1>
-  <div class="DarkModeButtons">
+  <!-- <div class="DarkModeButtons">
     <button class='' onclick="darkMode()" id="dark"><i class="fa-regular fa-moon"></i></button>
     <button class='hide' onclick="lightMode()" id="light" ><i class="fa-regular fa-sun"></i></button>
     <p class="tester">tester</p>
-  </div>
+  </div> -->
   
 
   <!-- Side Bar -->
@@ -46,7 +46,7 @@
     <header>Menu</header>
     <a href="#" >
       <i class="fas fa-user"></i>
-      <span>Usuário</span>
+      <span>Usuário </span>
     </a>
     <a href="#">
       <i class="fas fa-history"></i>
@@ -60,7 +60,7 @@
       <i class="fas fa-trash"></i>
       <span >Limpar tudo</span>
     </a>
-    <a href="#">
+    <a href="https://github.com/Muriloviskexe/A3-Usabilidade-Sistemas/blob/master/README.md" rel="next" target="_blank">
       <i class="far fa-question-circle"></i>
       <span>Sobre</span>
     </a>
