--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -18,14 +18,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
   <script>
-  function obterLembretes() {
-      axios.get('http://localhost:4000/lembretes')
+ function obterLembretes() {
+  axios.get('http://localhost:4000')
+    .then(response => {
+      console.log(response);
+
+      if (response.data && response.data.length > 0) {
+        document.getElementById('lemb').value = response.data[0].texto;
+      } else {
+        document.getElementById('lemb').value = 'Sem lembretes disponíveis';
+      }
+    })
+    .catch(error => {
+      console.log(error);   
+    });
+}
+  /* function obterObs() {
+      axios.get('http://localhost:5000')
           .then(r => {
               console.log(r);
-              document.getElementById('lemb').value = r.data["1"].texto;
+              document.getElementById('obs').value = r.data["1"].texto;
           })
-          .catch(e => console.log(e));
-  }
+          .catch(e => console.log(e)); 
+      }
+  */
+ 
   </script>
   <script src="src/main.js"></script>
 
@@ -106,6 +123,11 @@
 
     <button class="custom-btn btn-3" onclick="adcTarefa()"><span><i class="fa-solid fa-plus"></i></span></button>
   </div>
+<!--
+    <div class="obs">
+      <input type="text" placeholder="Digite uma observação" name="insertObs" id="insertObs">
+    </div> 
+-->
   <main>
 
       <!-- Card segunda! -->
@@ -117,7 +139,7 @@
         
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="segunda"></div>
     </div>
     </div>
@@ -130,7 +152,7 @@
         </h2>
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="terca"></div>
     </div>
     </div>
@@ -143,7 +165,7 @@
         </h2>
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="quarta"></div>
     </div>
     </div>
@@ -156,7 +178,7 @@
         </h2>
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="quinta"></div>
     </div>
     </div>
@@ -169,7 +191,7 @@
         </h2>
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="sexta"></div>
     </div>
     </div>
@@ -182,7 +204,7 @@
         </h2>
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="sabado"></div>
     </div>
     </div>
@@ -195,7 +217,7 @@
         </h2>
       </div>
       <div class="card-body">
-        <p class="text-tarefa text-light">Tarefas:</p>
+        <p class="text-tarefa">Tarefas:</p>
         <div class="tarefas" id="domingo"></div>
     </div>
     </div>
